--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -2,13 +2,31 @@
   text-align: center;
 }
 
+.AllButHeader {
+  background-color: #306B34;
+  vertical-align: bottom;
+  height: 80vh;
+  flex-grow: 1;
+  border-radius: 10%;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+
+#field {
+  justify-content: center;
+  align-content: space-around;
+  flex-wrap: nowrap;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 .App-header {
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
